<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText 
            android:id="@+id/zahl1"
            android:bufferType="normal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/rechenart"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:text="*" />

         <EditText 
            android:id="@+id/zahl2"
            android:bufferType="normal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
        
        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/plus"
            android:text="@string/plus"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp" />
        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/minus"
            android:text="@string/minus"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp" />
        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/mal"
            android:text="@string/mal"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp" />
        <Button
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/geteilt"
            android:text="@string/geteilt"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp" />
        
    </LinearLayout>
    
    <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/gleich"
            android:text="@string/gleich"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp" />
    
    <TextView
        android:id="@+id/ergebnis"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:text="@string/ergebnis"
        android:textSize="30dp" />

</LinearLayout>